--- a/index.html
+++ b/index.html
@@ -6,50 +6,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <ul class="navbar">
-            <li><a href="#welcome">Welcome</a></li>
-            <li><a href="#software">Software Experience</a></li>
-            <li><a href="#actuarial">Actuarial Experience</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#contact">Contact Me</a></li>
-        </ul>
-    </nav>
+    <div class="navbar" >
+        <a href="#welcome">Welcome</a>
+        <a href="#software">Software Experience</a>
+        <a href="#actuarial">Actuarial Experience</a>
+        <a href="#resume">Resume</a>
+        <a href="#contact">Contact Me</a>
+    </div>
 
-    <section id="welcome">
-        <h1>Welcome to My GitHub</h1>
-        <p>Hi, I'm <strong>Zach Wetmore</strong>. I graduated with distinction from the <strong>University of Minnesota</strong> with degrees in <strong>Mathematics – Actuarial Science</strong> and <strong>Computer Science</strong>, and a minor in <strong>Statistics</strong>.</p>
-    </section>
+    <main>
+        <section id="welcome">
+            <h1>Welcome to My GitHub</h1>
+            <p>Hi, I'm <strong>Zach Wetmore</strong>. I graduated with distinction from the <strong>University of Minnesota</strong> with degrees in <strong>Mathematics – Actuarial Science</strong> and <strong>Computer Science</strong>, and a minor in <strong>Statistics</strong>.</p>
+        </section>
 
-    <section id="software">
-        <h2>Software Experience</h2>
-        <ul>
-            <li><strong>Object-Oriented Programming (C++/Java)</strong> - Encapsulation, Inheritance, Polymorphism</li>
-            <li><strong>Systems Programming (C)</strong> - OS development and low-level computing</li>
-            <li><strong>Machine Learning (Python)</strong> - numpy, pandas, PyTorch, scikit-learn, seaborn
-                <ul>
-                    <li>Fundamentals of Machine Learning</li>
-                    <li>Applied Machine Learning</li>
-                </ul>
-            </li>
-            <li><strong>Algorithms & Functional Programming (OCaml/Java)</strong> - Advanced algorithms, recursion, data structures</li>
-            <li><strong>Computer Graphics (TypeScript/JavaScript with GopherGFX)</strong> - Interactive 3D graphics and rendering</li>
-        </ul>
-    </section>
+        <section id="software">
+            <h2>Software Experience</h2>
+            <ul>
+                <li><strong>Object-Oriented Programming (C++/Java)</strong> - Encapsulation, Inheritance, Polymorphism</li>
+                <li><strong>Systems Programming (C)</strong> - OS development and low-level computing</li>
+                <li><strong>Machine Learning (Python)</strong> - numpy, pandas, PyTorch, scikit-learn, seaborn
+                    <ul>
+                        <li>Fundamentals of Machine Learning</li>
+                        <li>Applied Machine Learning</li>
+                    </ul>
+                </li>
+                <li><strong>Algorithms & Functional Programming (OCaml/Java)</strong> - Advanced algorithms, recursion, data structures</li>
+                <li><strong>Computer Graphics (TypeScript/JavaScript with GopherGFX)</strong> - Interactive 3D graphics and rendering</li>
+            </ul>
+        </section>
 
-    <section id="actuarial">
-        <h2>Actuarial Experience</h2>
-        <p>I'm currently developing a <strong>mutual fund analysis project</strong> for a financial advising firm, leveraging my background in statistics, financial math, and data analysis.</p>
-    </section>
+        <section id="actuarial">
+            <h2>Actuarial Experience</h2>
+            <p>I'm currently developing a <strong>mutual fund analysis project</strong> for a financial advising firm, leveraging my background in statistics, financial math, and data analysis.</p>
+        </section>
 
-    <section id="resume">
-        <h2>Resume</h2>
-        <p><a href="ZachWetmoreResume2025.pdf" target="_blank">View my resume (PDF)</a></p>
-    </section>
+        <section id="resume">
+            <h2>Resume</h2>
+            <p><a href="ZachWetmoreResume2025.pdf" target="_blank">View my resume (PDF)</a></p>
+        </section>
 
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p><strong>Email:</strong> zwetmore33@gmail.com</p>
-    </section>
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p><strong>Email:</strong> zwetmore33@gmail.com</p>
+        </section>
+    </main>
 </body>
 </html>
