--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>Welcome to My GitHub</h1>
             <p>Hi, I'm <strong>Zach Wetmore</strong> — a recent graduate from the 
                 <strong>University of Minnesota</strong> with distinction, holding degrees in 
-                <strong>Mathematics – Actuarial Science</strong> and <strong>Computer Science</strong>, 
+                <strong>Mathematics - Actuarial Science</strong> and <strong>Computer Science</strong>, 
                 and a minor in <strong>Statistics</strong>.
             </p>
         
@@ -30,8 +30,9 @@
                 I love combining logic and creativity to make things work better.
             </p>
             <p>
-                Outside of code and calculus, I’m deeply interested in fitness, endurance training, and continuous personal development — 
-                I believe that a sharp mind and a disciplined body go hand in hand.
+                Outside of math and code, I'm deeply interested in fitness, weightlifting, endurance training, and jiu jitsu. <br>
+                In my free time I love spending time grilling, with family and friends, and relaxing while playing video games. <br><br>
+                I'm also a huge fan of the Minnesota Timberwolves, Twins, and Vikings.
             </p>
         
             <h2>Current Projects</h2>
@@ -41,8 +42,7 @@
                     where users can log, rate, review, and explore films with personalized insights and sorting features.
                 </li>
                 <li>
-                    <strong>Spotify–Apple Music Transition Tool</strong> — A utility that helps users sync and migrate playlists between Spotify and Apple Music,
-                    maintaining metadata, track order, and handling unlisted or unavailable songs.
+                    <strong>Spotify-Apple Music Transition Tool</strong> — A utility that helps users sync and migrate playlists between Spotify and Apple Music.
                 </li>
                 <li>
                     <strong>Mutual Fund Analysis Tool</strong> — A data-driven application built for a financial advising firm, 
