--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <section id="welcome" class="content-section active">
-            <h1>Welcome to My GitHub</h1>
+            <h1>Hello World!</h1>
             <p>Hi, I'm <strong>Zach Wetmore</strong> — a recent graduate from the 
                 <strong>University of Minnesota</strong> with distinction, holding degrees in 
                 <strong>Mathematics - Actuarial Science</strong> and <strong>Computer Science</strong>, 
@@ -32,7 +32,7 @@
             <p>
                 Outside of math and code, I'm deeply interested in fitness, weightlifting, endurance training, and jiu jitsu. <br>
                 In my free time I love spending time grilling, with family and friends, and relaxing while playing video games. <br><br>
-                I'm also a huge fan of the Minnesota Timberwolves, Twins, and Vikings.
+                I'm also a huge fan of the Minnesota Timberwolves, Twins, and Vikings. <br>
             </p>
         
             <h2>Current Projects</h2>
