--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <section id="welcome" class="content-section active">
-            <h1>Hello World!</h1>
+            <h1>Hello, World!</h1>
             <p>Hi, I'm <strong>Zach Wetmore</strong> — a recent graduate from the 
                 <strong>University of Minnesota</strong> with distinction, holding degrees in 
                 <strong>Mathematics - Actuarial Science</strong> and <strong>Computer Science</strong>, 
