--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <section id="resume" class="content-section">
             <h2>Resume</h2>
             <div style="margin-top: 20px;">
-                <a href="ZachWetmoreResume2025.pdf" 
+                <a href="ZachWetmoreResume.pdf" 
                    target="_blank" 
                    rel="noopener noreferrer" 
                    data-ignore="true"
