--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
             </ul>
 
             <blockquote style="margin-top: 20px; font-style: italic; color: #555;">
-                "Premature optimization is the root of all evil." — Donald Knuth<br>
+                " "Premature optimization is the root of all evil." — Donald Knuth "<br>
                 — Zach Wetmore
             </blockquote>
             
+
         </section>
         
 
