--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <li><strong>TypeScript/JavaScript</strong> — Web development, 3D graphics (GopherGFX), UI interaction</li>
                 <li><strong>AppleScript</strong> — Scripting and automation for Apple Music playlist management</li>
                 <li><strong>MATLAB, Excel</strong> — Mathematical modeling, statistical computation, actuarial tools</li>
-                <li><strong>HTML/CSS</strong> — Web development, responsive design, GitHub Pages integration</li>
+                <li><strong>HTML/CSS</strong> — Web development, UI/UX design, GitHub Pages integration</li>
             </ul>
         
             <h3>Python Package Experience</h3>
@@ -84,7 +84,7 @@
                 <li><strong>scikit-learn, PyTorch</strong> — ML models, classification, regression, neural networks</li>
                 <li><strong>seaborn, matplotlib, SciPy</strong> — Visualization, hypothesis testing, statistical analysis</li>
                 <li><strong>Django, Flask</strong> — Web app development, routing, templating</li>
-                <li><strong>OpenAI, Cursor</strong> — Generative AI toolchains for code generation, natural language prompting, and rapid prototyping</li>
+                <li><strong>OpenAI, Cursor</strong> — Skilled at leveraging LLMs for efficiency and learning</li>
                 <li><strong>XML, JSON</strong> — Structured data serialization and parsing for configuration and data management</li>
             </ul>
         
